Source/WebCore/platform/DragItem.h
@@ -43,7 +43,6 @@ struct DragItem final {
     DragSourceAction sourceAction { DragSourceActionNone };
     IntPoint eventPositionInContentCoordinates;
     IntPoint dragLocationInContentCoordinates;
-    IntPoint eventPositionInWindowCoordinates;
     IntPoint dragLocationInWindowCoordinates;
     String title;
     URL url;
@@ -62,7 +61,7 @@ void DragItem::encode(Encoder& encoder) const
     // FIXME(173815): We should encode and decode PasteboardWriterData and platform drag image data
     // here too, as part of moving off of the legacy dragging codepath.
     encoder.encodeEnum(sourceAction);
-    encoder << imageAnchorPoint << eventPositionInContentCoordinates << dragLocationInContentCoordinates << eventPositionInWindowCoordinates << dragLocationInWindowCoordinates << title << url << dragPreviewFrameInRootViewCoordinates;
+    encoder << imageAnchorPoint << eventPositionInContentCoordinates << dragLocationInContentCoordinates << dragLocationInWindowCoordinates << title << url << dragPreviewFrameInRootViewCoordinates;
     bool hasIndicatorData = image.hasIndicatorData();
     encoder << hasIndicatorData;
     if (hasIndicatorData)
@@ -80,8 +79,6 @@ bool DragItem::decode(Decoder& decoder, DragItem& result)
     if (!decoder.decode(result.eventPositionInContentCoordinates))
         return false;
     if (!decoder.decode(result.dragLocationInContentCoordinates))
-        return false;
-    if (!decoder.decode(result.eventPositionInWindowCoordinates))
         return false;
     if (!decoder.decode(result.dragLocationInWindowCoordinates))
         return false;
